updated the test login where i removed the defauld admin and admin123 to principal and proncipal123